--- a/boot.img-ramdisk/lpm.rc
+++ b/boot.img-ramdisk/lpm.rc
@@ -21,15 +21,11 @@ on init
     mkdir /tmp
     mkdir /dbdata
     mkdir /mnt 0775 root root
-    #mount /tmp /tmp tmpfs   
-
-    # J4FS(lfs) mount points.
-    #mkdir /mnt/.lfs 0755 root root
 
 on early-fs
 	insmod /lib/modules/vibrator.ko
  
-    mount ext4 /dev/block/mmcblk0p14 /system ro wait noatime
+        mount ext4 /dev/block/mmcblk0p14 /system ro wait noatime
 
 	mkdir /data/log 0777
 
@@ -43,18 +39,15 @@ on boot
 
 service debuggerd /system/bin/debuggerd
 
-	service ueventd /sbin/ueventd
-    	critical
+service ueventd /sbin/ueventd
+     critical
+
+service powersave /system/bin/poweroff_charging_power_save.sh
+    class charger
+    oneshot
 
 on post-fs
-    # Install Kernel Module
-    #insmod /system/lib/modules/j4fs.ko
-    # We need to decide j4fs's partition number(mmcblk0pX)
-    #mount j4fs /dev/block/mmcblk0p7 /mnt/.lfs wait
 
-    #insmod /system/lib/modules/param.ko
-
-#service console /bin/sh
 service console /system/bin/sh
 	console
 
